--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: aqua;
   }
   .coin{
     height: 22em;
@@ -46,19 +45,46 @@ body {
   }
   .cart {
     width: 40em;
-    /* background-color: crimson; */
+    background-color: rgb(236, 210, 154);
   
     height: 100vh;
   
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(0, 255, 34);
   }
   
   
   .picture {
     height: 8em;
   }
-  
+  .button{
+    background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.5s; /* Safari */
+  transition-duration: 0.5s;
+  }
+  .button:hover {
+    background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  -webkit-transition-duration: 0.7s; /* Safari */
+  transition-duration: 0.7s;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
