--- a/css/styles.css
+++ b/css/styles.css
@@ -71,16 +71,15 @@ body {
   width: 18em;
 }
 #precioCaja {
-  align-items: center;
-  justify-content: center;
+  
 }
 .caja {
-  width: 6%;
+  width: 24%;
   height: 2.3em;
   z-index: 1;
-  position: absolute;
-  top: 29%;
-  right: 16%;
+  position: relative;
+  top: 10%;
+  left: 15%;
   background-color: rgba(0, 0, 0, 0.922);
   color: #4caf50;
   font-size: 22px;
