--- a/css/styles.css
+++ b/css/styles.css
@@ -3,23 +3,16 @@ body {
   padding: 0;
 
   height: 100vh;
+  overflow-x: hidden;
   /* width: 100vw; */
 
-  display: flex;
-  flex-direction: row;
+  
 }
 
-.general {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
+
 
 .showcase {
-  width: 56em;
+  
   /* background-color: crimson; */
 
   height: 100vh;
@@ -29,7 +22,7 @@ body {
   align-items: center;
   background-color: rgb(77, 76, 76);
   border-radius: 5%;
-  margin: 2%;
+  
 }
 .coin {
   height: 22em;
@@ -58,10 +51,8 @@ body {
   width: 100%;
   background-color: rgb(236, 210, 154);
 
-  height: 100vh;
   border-radius: 20%;
-  margin: 5%;
-
+  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -144,9 +135,6 @@ body {
 }
 .styled-table tbody tr:last-of-type {
   border-bottom: 2px solid #009879;
-}
-td{
-  
 }
 
 
